added commissions page

--- a/commissions.html
+++ b/commissions.html
@@ -32,12 +32,12 @@
                         <li class="header_nav">
                             <a href="index.html">Inicio</a>
                         </li>
-                        <li class="header_nav">
+                        <!-- <li class="header_nav">
                             <a href="benefits.html">Beneficios</a>
                         </li>
                         <li class="header_nav">
                             <a href="prices.html">Precios</a>
-                        </li>
+                        </li> -->
                         <li class="header_nav">
                             <a href="commissions.html">Comisiones</a>
                         </li>
@@ -51,7 +51,114 @@
             </a>
         </nav>
     </header>
-    COMISIONES
+    <main>
+        <div class="content1">
+            <div class="divStyle1">
+                <h1 class="title1 text-gradient">Gana por cada venta. Sin riesgos. Sin costos ocultos.</h1>
+                <p class="subtitle1">Bienvenido al programa de comisiones de <span>ListoShop</span>. Aquí no pagas
+                    mensualidades, solo monetizas creando contenido mostrando nuestros productos y genera ventas.</p>
+            </div>
+            <div class="divStyle2">
+                <p class="title2">En ListoShop creemos en un modelo justo:</p>
+                <ul class="howitworks_subtitle">
+                    <li>Tú vendes, tú ganas</li>
+                    <li>Nosotros nos enfocamos en la logística e inventarios.</li>
+                </ul>
+            </div>
+            <br>
+            <p class="subtitle2">Con acceso a productos listos para vender, logística integrada y una plataforma
+                optimizada,
+                puedes enfocarte
+                en los más importante: <span>vender y escalar</span>.</p>
+        </div>
+        <div class="content1">
+            <div class="divStyle2">
+                <p class="title2">¿Cómo funciona?</p>
+                <ul class="howitworks_subtitle">
+                    <li>Crea contenido mostrando nuestros productos</li>
+                    <li>Comparte tu contenido en tus redes sociales (Facebook,Instagram,WhatsApp,TikTok,etc).</li>
+                    <li>Cuando una venta se completa, <span>recibes comisión automática</span></li>
+                </ul>
+            </div>
+        </div>
+        <div class="divContainer">
+            <div class="content1">
+                <h1 class="title1 text-gradient">Opciones que se ajustan a todos</h1>
+                <p class="subtitle1">Ya seas un emprendedor principiante con pocos seguidores o miles de seguidores,
+                    contamos con opciones que se adaptan a ti para darte los mejores beneficios </p>
+            </div>
+            <div class="content2">
+                <div class="content1 content1Style">
+                    <div class="divStyle4">
+                        <p class="title2">Básico</p>
+                        <p class="subtitle2">Incluye:</p>
+                        <div class="divStyle3">
+                            <ul class="howitworks_subtitle">
+                                <li>15% de comisión en todas las ventas completadas</li>
+                                <li>Sin costo de registro</li>
+                                <li>Sin mensualidades</li>
+                                <li>Acceso nuestro catálogo completo</li>
+                                <li>Logística y operación incluidas</li>
+                                <li>Pagos claros y transparentes</li>
+                            </ul>
+                            <a href="https://wa.me/5218183622215?text=Hola%20quiero%20informaci%C3%B3n%20para%20empezar%20a%20vender%20con%20ListoShop"
+                                target="_blank" rel="noopener" class="button2">
+                                <span class="btn-desktop">Quiero mi tienda</span>
+                                <span class="btn-mobile">Empezar ahora</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="content1 content2Style">
+                    <div class="divStyle4">
+                        <p class="title2">Premium</p>
+                        <p class="subtitle2">Incluye todo lo del plan Básico, más:</p>
+                        <div class="divStyle3">
+                            <ul class="howitworks_subtitle">
+                                <li>20% de comisión por venta completada</li>
+                                <li>Soporte preferente</li>
+                                <li>Nombre de tienda personalizado</li>
+                                <li>Empaque personalizado</li>
+                            </ul>
+                            <a href="https://wa.me/5218183622215?text=Hola%20quiero%20informaci%C3%B3n%20para%20empezar%20a%20vender%20con%20ListoShop"
+                                target="_blank" rel="noopener" class="button2">
+                                <span class="btn-desktop">Quiero mi tienda</span>
+                                <span class="btn-mobile">Empezar ahora</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="content1 content1Style">
+                    <div class="divStyle4">
+                        <p class="title2">Elite</p>
+                        <p class="subtitle2">Incluye todo lo del plan Básico, más:</p>
+                        <div class="divStyle3">
+                            <ul class="howitworks_subtitle">
+                                <li>25% de comisión por venta completada</li>
+                                <li>Productos exclusivos</li>
+                                <li>Optimización de catálogo (precios promos)</li>
+                                <li>Acceso a campañas especiales</li>
+                                <li>Atención dedicada</li>
+                            </ul>
+                            <a href="https://wa.me/5218183622215?text=Hola%20quiero%20informaci%C3%B3n%20para%20empezar%20a%20vender%20con%20ListoShop"
+                                target="_blank" rel="noopener" class="button2">
+                                <span class="btn-desktop">Quiero mi tienda</span>
+                                <span class="btn-mobile">Empezar ahora</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="divStyle3">
+            <h1 class="subtitle1">Contáctanos para que un asesor te cuente más detalles</h1>
+            <a href="https://wa.me/5218183622215?text=Hola%20quiero%20informaci%C3%B3n%20para%20empezar%20a%20vender%20con%20ListoShop"
+                target="_blank" rel="noopener" class="button2">
+                <span class="btn-desktop">Contactar a un asesor</span>
+                <span class="btn-mobile">Contactar a un asesor</span>
+            </a>
+        </div>
+    </main>
     <footer>
         <div class="footer_container">
             <div class="logo_container">
