--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                         <li class="header_nav">
                             <a href="index.html">Inicio</a>
                         </li>
-                        <li class="header_nav">
-                            <a href="benefits.html">Beneficios</a>
+                        <!-- <li class="header_nav">
+                            <a href="commissions.html">Beneficios</a>
                         </li>
                         <li class="header_nav">
                             <a href="prices.html">Precios</a>
-                        </li>
+                        </li> -->
                         <li class="header_nav">
                             <a href="commissions.html">Comisiones</a>
                         </li>
