added images to commisions.html

--- a/commissions.html
+++ b/commissions.html
@@ -52,6 +52,12 @@
         </nav>
     </header>
     <main>
+        <div class="commissions_hero_images">
+            <picture>
+                <source srcset="images/hero_commissions_mobile.png" media="(max-width: 480px)">
+                <img id="hero_image" src="images/hero_commissions.png" alt="Hero ListoShop">
+            </picture>
+        </div>
         <div class="content1">
             <div class="divStyle1">
                 <h1 class="title1 text-gradient">Gana por cada venta. Sin riesgos. Sin costos ocultos.</h1>
@@ -64,12 +70,11 @@
                     <li>Tú vendes, tú ganas</li>
                     <li>Nosotros nos enfocamos en la logística e inventarios.</li>
                 </ul>
+                <p class="subtitle2">Con acceso a productos listos para vender, logística integrada y una plataforma
+                    optimizada,
+                    puedes enfocarte
+                    en los más importante: <span>vender y escalar</span>.</p>
             </div>
-            <br>
-            <p class="subtitle2">Con acceso a productos listos para vender, logística integrada y una plataforma
-                optimizada,
-                puedes enfocarte
-                en los más importante: <span>vender y escalar</span>.</p>
         </div>
         <div class="content1">
             <div class="divStyle2">
